syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank {}

message GetCategoryRequest {
    string id = 1;
}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoriesList {
    repeated Category categories = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoriesList) {}
    rpc CreateCategoryStreamBidiretional(stream CreateCategoryRequest) returns (stream Category) {}
    rpc GetCategory(GetCategoryRequest) returns (Category) {}
    rpc ListCategories(blank) returns (CategoriesList) {}
}
